--- a/.github/workflows/destroy-infrastructure.yml
+++ b/.github/workflows/destroy-infrastructure.yml
@@ -16,7 +16,7 @@ env:
   CLUSTER_NAME: "vanillatstodo-cluster"
   TABLE_NAME: "vanillatstodo-terraform-state-lock"
   BUCKET_NAME: "vanillatstodo-terraform-state"
-  AWS_REGION: "us-west-1"
+  AWS_REGION: "us-east-2"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
