--- a/.github/workflows/deploy-infrastructure.yml
+++ b/.github/workflows/deploy-infrastructure.yml
@@ -6,6 +6,11 @@ on:
       - staging
   workflow_dispatch:
 
+env:
+  AWS_REGION: "us-east-2"
+  CLUSTER_VERSION: "1.31"
+  TF_VAR_region: "us-east-2"
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -18,14 +23,14 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v1
+        uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: "1.7.0" # Specify your desired version
           terraform_wrapper: false
@@ -83,7 +88,7 @@ jobs:
           terraform init \
             -backend-config="bucket=vanillatstodo-terraform-state" \
             -backend-config="key=staging/monitoring.tfstate" \
-            -backend-config="region=us-east-2"
+            -backend-config="region=${{ env.AWS_REGION }}"
           terraform validate
           terraform plan -out=tfplan
           terraform apply -auto-approve tfplan
