--- a/.github/workflows/deploy-infrastructure.yml
+++ b/.github/workflows/deploy-infrastructure.yml
@@ -13,6 +13,8 @@ env:
   PROJECT_NAME: "vanillatstodo"
   TF_VERSION: "1.10.0"
   TF_VAR_environment: "staging"
+  CLUSTER_VERSION: "1.31"
+  TF_VAR_kubernetes_version: "1.31"
 
 jobs:
   deploy:
