--- a/.github/workflows/destroy-infrastructure.yml
+++ b/.github/workflows/destroy-infrastructure.yml
@@ -223,48 +223,37 @@ jobs:
           if aws s3api head-bucket --bucket ${{ env.BUCKET_NAME }} 2>/dev/null; then
             echo "📦 Found bucket: ${{ env.BUCKET_NAME }}"
             
-            # Disable versioning
+            # Disable versioning first
             echo "🔄 Disabling versioning..."
             aws s3api put-bucket-versioning \
               --bucket ${{ env.BUCKET_NAME }} \
               --versioning-configuration Status=Suspended
 
-            # Check and delete versions with null handling
-            echo "🗑️ Checking for object versions..."
-            VERSIONS=$(aws s3api list-object-versions \
+            # Delete all objects including versions
+            echo "🗑️ Deleting all objects..."
+            aws s3api list-object-versions \
               --bucket ${{ env.BUCKET_NAME }} \
-              --output json 2>/dev/null || echo '{"Versions":[]}')
-            
-            if [ "$(echo "$VERSIONS" | jq '.Versions | length')" -gt 0 ]; then
-              echo "Found object versions to delete..."
-              echo "$VERSIONS" | \
-              jq -c '.Versions | map({Key:.Key, VersionId:.VersionId}) | {Objects: ., Quiet: true}' | \
-              aws s3api delete-objects \
+              --output json \
+              --query '{Objects: [{Key: Versions[].Key, VersionId: Versions[].VersionId}]}' \
+              2>/dev/null | \
+            jq -c '.Objects[]' | \
+            while read -r object; do
+              KEY=$(echo "$object" | jq -r '.Key')
+              VERSION=$(echo "$object" | jq -r '.VersionId')
+              echo "Deleting object: $KEY version: $VERSION"
+              aws s3api delete-object \
                 --bucket ${{ env.BUCKET_NAME }} \
-                --delete file:///dev/stdin || true
-            else
-              echo "No object versions found"
-            fi
+                --key "$KEY" \
+                --version-id "$VERSION" || true
+            done
 
-            # Check and delete markers with null handling
-            echo "🗑️ Checking for delete markers..."
-            MARKERS=$(aws s3api list-object-versions \
-              --bucket ${{ env.BUCKET_NAME }} \
-              --output json 2>/dev/null || echo '{"DeleteMarkers":[]}')
-            
-            if [ "$(echo "$MARKERS" | jq '.DeleteMarkers | length')" -gt 0 ]; then
-              echo "Found delete markers to remove..."
-              echo "$MARKERS" | \
-              jq -c '.DeleteMarkers | map({Key:.Key, VersionId:.VersionId}) | {Objects: ., Quiet: true}' | \
-              aws s3api delete-objects \
-                --bucket ${{ env.BUCKET_NAME }} \
-                --delete file:///dev/stdin || true
-            else
-              echo "No delete markers found"
-            fi
+            # Force delete all remaining objects
+            echo "🗑️ Force cleaning bucket..."
+            aws s3 rm s3://${{ env.BUCKET_NAME }} --recursive
 
-            # Delete bucket
+            # Final bucket deletion
             echo "🗑️ Deleting bucket..."
+            sleep 5  # Wait for deletions to complete
             if aws s3api delete-bucket --bucket ${{ env.BUCKET_NAME }}; then
               echo "✅ S3 bucket deleted successfully"
               echo "S3_STATUS=✅" >> $GITHUB_ENV
